# nhdesigngen

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  index.html  main.css  main.js
pkg/: README.md  nhdesigngen.d.ts  nhdesigngen.js  nhdesigngen_bg.d.ts  nhdesigngen_bg.wasm  package.json
src/: color.rs  design.rs  gtk.rs  lib.rs  main.rs
src/gtk/: error.rs  window.glade  window.rs
