[package]
name = "nhdesigngen"
version = "0.1.0"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
description = "An Animal Crossing: New Horizons design generator"
readme = "README.md"
homepage = "https://gitlab.com/Taywee/nhdesigngen"
repository = "https://gitlab.com/Taywee/nhdesigngen"
license = "MIT"
keywords = ["games", "graphics"]
categories = ["games","multimedia::images", "multimedia"]

[dependencies]
image = '^0.23'
exoquant = '^0.2'
#clap = '^2'
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
pango = "^0"
glib = "^0"

[dependencies.gtk]
version = "^0.8"
features = ["v3_20"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
