[package]
name = "nhdesigngen"
version = "0.2.0"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
description = "An Animal Crossing: New Horizons design generator"
readme = "README.md"
homepage = "https://gitlab.com/Taywee/nhdesigngen"
repository = "https://gitlab.com/Taywee/nhdesigngen"
license = "MIT"
keywords = ["games", "graphics"]
categories = ["games","multimedia::images", "multimedia"]

[lib]
crate-type = ["cdylib"]

[dependencies]
exoquant = '^0.2'
js-sys = '^0.3'

[dependencies.serde]
version = '^1'
features = ['derive']

[dependencies.wasm-bindgen]
version = '^0.2'
features = ['serde-serialize']

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
